--- a/Kyrsach/View/Pages/MainProgramPage.xaml
+++ b/Kyrsach/View/Pages/MainProgramPage.xaml
@@ -6,32 +6,127 @@
       xmlns:local="clr-namespace:Kyrsach.View.Pages"
       xmlns:oxy="http://oxyplot.org/wpf"
       xmlns:vm="clr-namespace:Kyrsach.ViewModel"
+      xmlns:fa="http://schemas.fontawesome.io/icons/"
+      xmlns:conv="clr-namespace:Kyrsach.View.Convertors"
+      xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainProgramPage">
+      d:DesignHeight="950" d:DesignWidth="1000"
+      Title="VA_Crypto">
+
     <Page.DataContext>
         <vm:MainProgramViewModel/>
     </Page.DataContext>
+    <Page.Resources>
+        <ResourceDictionary>
+            <conv:CorrencyConvertor x:Key="ConvertCurrency"/>
+        </ResourceDictionary>
+    </Page.Resources>
+    <TabControl Margin="0,0,0,0" Name="TabContorlWallets" ItemsSource="{Binding Wallets}" Background="#FF262829" Foreground="{x:Null}" BorderBrush="Black" >
+        <TabControl.ItemTemplate >
+            <DataTemplate >
+                <StackPanel Background="#FF262829" Orientation="Horizontal" VerticalAlignment="Top" Margin="10 0">
+                    <TextBlock Uid="2" Width="162" Text="{Binding CurrencyName}" Height="50" Background="{x:Null}" TextAlignment="Center" FontSize="32"  VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding CurrencyColorBrush}" FontWeight="Bold"/>
+                    </StackPanel>
+                
+            </DataTemplate>
+        </TabControl.ItemTemplate>
+        <TabControl.ContentTemplate>
+            <DataTemplate>
+               
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-            
-        <Image Grid.RowSpan="3"  Stretch="UniformToFill" Source="{StaticResource FoneImage}" />
-        
-        <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5" Text="{Binding Balance}" VerticalAlignment="Top" FontSize="56"/>
-            <TextBlock HorizontalAlignment="Center" Margin="4,-10,4,4" TextWrapping="Wrap" Text="$0.00" VerticalAlignment="Top" FontSize="20"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Отправить" HorizontalAlignment="Left" Margin="5,0" VerticalAlignment="Top" Width="128" Height="35"/>
-                <Button Content="Получить" HorizontalAlignment="Right" Margin="5,0"  VerticalAlignment="Top" Width="128" Height="35"/>
-            </StackPanel>
-        </StackPanel>
-        <oxy:PlotView  Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Model="{Binding PlotModel2}" Background="{x:Null}"/>
-    </Grid>
+                <Grid>
+
+                    <Grid.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="#FF17191B" Offset="1"/>
+                            <GradientStop Color="#FF282C2E" Offset="0.003"/>
+                            <GradientStop Color="#FF262829" Offset="0.49"/>
+                        </LinearGradientBrush>
+                    </Grid.Background>
+
+                    <Grid.Resources>
+                        <Style x:Key="CleanSeparator" TargetType="lvc:Separator">
+                            <Setter Property="IsEnabled" Value="False"></Setter>
+                        </Style>
+                    </Grid.Resources>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <!--<StackPanel  Orientation="Horizontal" Height="50" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="0" >
+                        <Button BorderThickness="0">
+                            <Grid>
+                                <TextBlock Name="IDAddress" VerticalAlignment="Center" Text="Ethereum" Background="{x:Null}" Opacity="0.7" Width="260" Height="35" HorizontalAlignment="Center"  FontSize="25" TextAlignment="Center"/>
+                                <fa:ImageAwesome VerticalAlignment="Center" HorizontalAlignment="Right" Opacity="0.7" Margin="15,0" Height="25"  Icon="AngleRight" Panel.ZIndex="1" Foreground="#FFF3F3F3"/>
+                            </Grid>
+                        </Button>
+                    </StackPanel>-->
+
+                    <!--<Image Grid.RowSpan="3"  Stretch="UniformToFill" Source="{StaticResource FoneImage}" />-->
+
+                    <lvc:CartesianChart Grid.Row="1" Series="{Binding SeriesCollection}" LegendLocation="None" Foreground="Black" ScrollBarFill="{x:Null}"  >
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis Title="Курс"  FontSize="12" LabelFormatter="{Binding YFormatter}" Foreground="White" Cursor="None"/>
+                        </lvc:CartesianChart.AxisY>
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis Title="Число" FontSize="12" Labels="{Binding Labels}" Foreground="White">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator Style="{StaticResource CleanSeparator}"></lvc:Separator>
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                    </lvc:CartesianChart>
+                   
+                    <!--<oxy:PlotView  Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Model="{Binding PlotModel2}" Background="{x:Null}"/>-->
+                    <StackPanel HorizontalAlignment="Right" Margin="50">
+                        <Button  Width="75" Height="50" Click="Button_Click_1">
+                            <fa:ImageAwesome  Opacity="0.7" Margin="0,0,0,0" Height="25" Icon="Exchange"   Panel.ZIndex="1" Foreground="#FFF3F3F3"/>
+                        </Button>
+                    </StackPanel>
+                    <StackPanel HorizontalAlignment="Left" Margin="50">
+                        <Button  Width="75" Height="50" Click="OpenHistoryTransaction">
+                            <fa:ImageAwesome  Opacity="0.7" Margin="0,0,0,0" Height="25" Icon="History"   Panel.ZIndex="1" Foreground="#FFF3F3F3"/>
+                        </Button>
+                    </StackPanel>
+                  
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="0">
+                        <Image Stretch="UniformToFill" Width="100" Height="100" Margin="0,0,0,0" Source="{Binding CurrencyLogo}"/>
+                        <!--<Button Foreground="{Binding CurrencyColorBrush}"  Content="{Binding Balance}" VerticalAlignment="Top"  Margin="0,5,0,0" Height="100" Width="150" FontSize="76" ></Button>-->
+                        <TextBlock  x:Name="Amount" Foreground="{Binding CurrencyColorBrush}" HorizontalAlignment="Center" TextWrapping="Wrap" Margin="0,5" Text="{Binding Balance}" VerticalAlignment="Top" FontSize="76"/>
+                        <TextBlock Foreground="#FFF4F4F4" HorizontalAlignment="Center" Margin="4,-10,4,4" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="25">
+                            <TextBlock.Text>
+                                <MultiBinding Converter="{StaticResource ConvertCurrency}" StringFormat="${0}">
+                                    <Binding ElementName="Amount" Path="Text"/>
+                                    <Binding ElementName="TabContorlWallets" Path="SelectedIndex"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                        
+                      
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Click="Button_Click" Content="Отправить"  HorizontalAlignment="Left" Margin="18,0" VerticalAlignment="Top" FontSize="25" Width="228" Height="45" BorderBrush="{Binding CurrencyColorBrush}"/>
+                            <Button Click="Receive_Click" Content="Получить" HorizontalAlignment="Right" Margin="18,0"  VerticalAlignment="Top" FontSize="25" Width="228" Height="45"  BorderBrush="{Binding CurrencyColorBrush}"/>
+                        </StackPanel>
+                       
+
+                    </StackPanel>
+                    <!--<lvc:CartesianChart Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right" >
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Sales" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>-->
+
+                   
+                </Grid>
+            </DataTemplate>
+        </TabControl.ContentTemplate>
+    </TabControl>
     <!--<Grid>
         <Image Height="450" Stretch="UniformToFill" Source="{StaticResource FoneImage}" />
         <TextBox Name="Test" HorizontalAlignment="Left" Height="86" Margin="268,313,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="277" FontSize="18"/>
