--- a/Kyrsach/App.xaml
+++ b/Kyrsach/App.xaml
@@ -2,35 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Kyrsach"
+             xmlns:ser="clr-namespace:Kyrsach.Services"
              StartupUri="View\Windows\HomeWindow.xaml" Startup="Application_Startup">
- 
     <Application.Resources>
-
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resurser/Themes.xaml"/>
-        </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary.MergedDictionaries>
+            <ser:VMLocator x:Key="vmlocator"/>
         </ResourceDictionary>
-       
-        <!--<Style TargetType="Button">
-            <Setter Property="SnapsToDevicePixels" Value="True"/>
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Width" Value="150"/>
-            <Setter Property="Height" Value="50"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border  CornerRadius="8"  BorderThickness="1" BorderBrush="White" >
-                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
-                        </Border> 
-                        
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-            <Style TargetType="Label">
-                <Setter Property="Foreground" Value="White"/>
-            </Style>-->
-
     </Application.Resources>
 </Application>
