--- a/Kyrsach/View/Pages/MainProgramPage.xaml
+++ b/Kyrsach/View/Pages/MainProgramPage.xaml
@@ -11,11 +11,7 @@
       xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="950" d:DesignWidth="1000"
-      Title="VA_Crypto">
-
-    <Page.DataContext>
-        <vm:MainProgramViewModel/>
-    </Page.DataContext>
+      Title="VA_Crypto" DataContext="{Binding MainVM, Source={StaticResource vmlocator}}">
     <Page.Resources>
         <ResourceDictionary>
             <conv:CorrencyConvertor x:Key="ConvertCurrency"/>
