--- a/Kyrsach/View/Pages/Receive.xaml
+++ b/Kyrsach/View/Pages/Receive.xaml
@@ -10,15 +10,8 @@
       xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="950" d:DesignWidth="1000"
-      Title="VA_Crypto">
-    <Page.Resources>
-        
-    </Page.Resources>
-    
-    <Page.DataContext>
-        <vm:MainProgramViewModel/>
-    </Page.DataContext>
-    
+      Title="VA_Crypto" DataContext="{Binding MainVM, Source={StaticResource vmlocator}}">
+
     <Grid>
         <!--<Image Stretch="UniformToFill" Source="{StaticResource FoneImage}" />-->
         <Grid.Background>
